# ANIME-RECOMMENDER-SYSTEM-LLMOPS

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
app/: app.py
config/: config.py
pipeline/: build_pipeline.py  pipeline.py
prometheus/: prometheus-configmap.yaml
src/: data_loader.py
